--- a/css/styles.css
+++ b/css/styles.css
@@ -11495,3 +11495,8 @@ html {
 .copyright {
   background-color: #1a252f;
 }
+
+.contact-info {
+  display: flex;
+  justify-content: space-around;
+}
