--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ hr:not([size]) {
   height: 0.125rem;
 }
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+a, h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -237,6 +237,7 @@ sup {
 a {
   color: #1abc9c;
   text-decoration: underline;
+  font-size: calc(1.275rem + 0.3vw);
 }
 a:hover {
   color: #15967d;
@@ -11506,4 +11507,5 @@ html {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 1rem;
+  align-items: center;
 }
